--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "laravel/jetstream": "^2.2",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
-        "livewire/livewire": "^2.0"
+        "livewire/livewire": "^2.0",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.18"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
