Update debian packaging to work with new MAC allocation code. Also saw issue where `public/uploads` did not exist after install. I couldn't see how it was even added by original rules so added as folder in repo.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+# build files using debuild for deb package creation
+debian/cmprovision4
+debian/files
+debian/*.log
+debian/*.debhelper
+debian/cmprovision4.substvars
